--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div id=" "></div>
     <input type="text">
+    <button>Submit</button>
+    <br>
     <input type="text">
+    <button>Submit</button>
+    <br>
     <textarea></textarea>
     <button id="pressBtn">Submit</button>
     <div id="feedback-display"></div>
+    <script src="cp_1.js"></script>
 </body>
 </html>
