--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <div id=" "></div>
+    <center><div id="txtbox"></div>
     <input type="text">
     <button>Submit</button>
     <br>
